<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:screenOrientation="landscape"
    tools:context=".GameActivity">

    <TextView
        android:id="@+id/nom_joueur1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:hint="@string/player_name1"
        android:textSize="@dimen/text_size"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/TV_Nbre1"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_marginStart="20dp"
        android:gravity="center"
        android:hint="@string/_0"
        android:orientation="vertical"
        android:textSize="@dimen/size_number"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/TV_Nbre2"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_marginEnd="20dp"
        android:gravity="center"
        android:hint="@string/_0"
        android:orientation="vertical"
        android:rotation="180"
        android:textSize="@dimen/size_number"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/nom_joueur2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:hint="@string/player_name2"
        android:rotation="180"
        android:textSize="@dimen/text_size"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:ignore="MissingConstraints" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/hitButtonPlayer2"
        style="@style/Button.ALL"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:foregroundGravity="center"
        app:layout_constraintEnd_toStartOf="@+id/TV_Nbre2"
        app:layout_constraintStart_toEndOf="@+id/TV_Nbre1"
        app:layout_constraintTop_toBottomOf="@+id/nom_joueur1"
        tools:ignore="SpeakableTextPresentCheck" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/hitButtonPlayer1"
        style="@style/Button.ALL"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:foregroundGravity="center"
        app:layout_constraintBottom_toTopOf="@+id/nom_joueur2"
        app:layout_constraintEnd_toStartOf="@+id/TV_Nbre2"
        app:layout_constraintStart_toEndOf="@+id/TV_Nbre1"
        tools:ignore="SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/questionJoueur1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:gravity="center"
        android:text="@string/Hint_question1"
        android:textSize="@dimen/question_size"
        app:layout_constraintBottom_toTopOf="@+id/hitButtonPlayer1"
        app:layout_constraintEnd_toStartOf="@+id/TV_Nbre2"
        app:layout_constraintStart_toEndOf="@+id/TV_Nbre1" />



    <View
        android:id="@+id/ligne_de_separation"
        android:layout_width="0dp"
        android:layout_height="5dp"
        android:background="@color/orange"
        app:layout_constraintBottom_toBottomOf="@+id/questionJoueur1"
        app:layout_constraintEnd_toEndOf="@+id/questionJoueur1"
        app:layout_constraintStart_toStartOf="@+id/questionJoueur1"
        app:layout_constraintTop_toTopOf="@+id/questionJoueur2" />


    <TextView
        android:id="@+id/questionJoueur2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:rotation="180"
        android:text="@string/Hint_question2"
        android:textSize="@dimen/question_size"
        app:layout_constraintEnd_toStartOf="@+id/TV_Nbre2"
        app:layout_constraintStart_toEndOf="@+id/TV_Nbre1"
        app:layout_constraintTop_toBottomOf="@+id/hitButtonPlayer2" />


    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="center"
        app:layout_constraintBottom_toTopOf="@+id/questionJoueur1"
        app:layout_constraintEnd_toStartOf="@+id/TV_Nbre2"
        app:layout_constraintStart_toEndOf="@+id/TV_Nbre1"
        app:layout_constraintTop_toBottomOf="@+id/questionJoueur2"
        tools:ignore="MissingConstraints">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_menu"
            style="@style/Button.ALL"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="12dp"
            android:layout_toStartOf="@+id/btn_restart"
            android:gravity="center"
            android:text="@string/menu" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_restart"
            style="@style/Button.ALL"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="10dp"
            android:gravity="center"
            android:text="@string/restart" />

    </RelativeLayout>


</androidx.constraintlayout.widget.ConstraintLayout>
